--- a/app/index.html
+++ b/app/index.html
@@ -36,12 +36,15 @@
 	<body>
 		<header class="page-header">
 			<div class="page-header__top">
-				<a class="page-header__logo"></a>
+				<a class="page-header__logo icon-logo"></a>
 				<nav class="main-nav main-nav--closed main-nav--nojs">
 					<div class="main-nav__wrapper">
 						<ul class="main-nav__list site-list">
 							<li class="site-list__item">
-								<a href="#"><span>Что там будет</span> Подарок</a>
+								<a href="#">Что там будет</a>
+							</li>
+							<li class="site-list__item">
+								<a href="#">Подарок</a>
 							</li>
 							<li class="site-list__item">
 								<a href="#">Где собираемся</a>
@@ -125,28 +128,154 @@
 				</ul>
 				<button class="schedule__btn btn">Посетить вечер</button>
 			</section>
+
 			<section class="present">
 				<h2 class="present__title">Подарок</h2>
 				<div class="present__left">
 					<picture>
 						<source type="image/webp" media="(max-width: 576px)" srcset="img/webp/gift-mobile@1x.webp 1x, img/webp/gift-mobile@2x.webp 2x, img/webp/gift-mobile@3x.webp 3x">
             <source type="image/webp" srcset="img/webp/gift-desktop@1x.webp 1x, img/webp/gift-desktop@2x.webp 2x, img/webp/gift-desktop@3x.webp 3x">
-            <source media="(max-width: 576px)" srcset="img/gift-mobile@1x.png 1x, img/gift-mobile@2x.png 2x, img/gift-mobile@3x.png 3x" >
+            <source media="(max-width: 576px)" srcset="img/gift-mobile@1x.png 1x, img/gift-mobile@2x.png 2x, img/gift-mobile@3x.png 3x">
             <img class="agenda__image" src="img/gift-desktop@1x.png" srcset="img/gift-desktop@2x.png 2x, img/gift-desktop@3x.png 3x" alt="Новый Завет">
 					</picture>
 				</div>
-				<present__right>
+				<div class="present__right>
 					<p class="present__info">Вас ждет подарок!!
 						<strong class="present__bible">Новый Завет<sup>&#10059;</sup> с примечаниями</strong>
 						в одном из лучших переводов на русский язык
 					</p>
 					<p class="present__remark"><sup>&#10059;</sup> Новый Завет – вторая часть Библии, написанная после рождения Иисуса Христа</p>
-				</present__right>
+				</div>
+			</section>
+
+			<section class="gathering">
+				<h2 class="gathering__title">Где собираемся?</h2>
+				<div class="gathering__info meeting">
+					<div class="meeting__left">
+						<h3 class="meeting__title">Кафе "Сендвич", ул. Заньковецкая 89А</h3>
+						<p class="meeting__info">Вечера будут проходить с понедельника по пятницу в 17:00-20:00. Кафе в корпусе факультета информатики Закарпатского государственного университета</p>
+						<div class="meeting__map"></div>
+					</div>
+					<div class="meeting__right">
+						<ul class="meeting__slider owl-carousel owl-theme">
+							<li class="meeting__item item">
+								<picture>
+									<source type="image/webp" media="(max-width: 576px)" srcset="img/webp/cafe_sandwich-mobile1@1x.webp 1x, img/webp/cafe_sandwich-mobile1@2x.webp 2x, img/webp/cafe_sandwich-mobile1@3x.webp 3x">
+			            <source type="image/webp" srcset="img/webp/cafe_sandwich-desktop1@1x.webp 1x, img/webp/cafe_sandwich-desktop1@2x.webp 2x, img/webp/cafe_sandwich-desktop1@3x.webp 3x">
+			            <source media="(max-width: 576px)" srcset="img/cafe_sandwich-mobile1@1x.png 1x, img/cafe_sandwich-mobile1@2x.png 2x, img/cafe_sandwich-mobile1@3x.png 3x">
+									<img class="meeting__image" src="img/cafe_sandwich-desktop1@1x.png" srcset="img/cafe_sandwich-desktop1@2x.png 2x, img/cafe_sandwich-desktop1@3x.png 3x" alt="Кафе &quot;Сендвич&quot;">
+								</picture>
+							</li>
+							<li class="meeting__item item">
+								<picture>
+									<source type="image/webp" media="(max-width: 576px)" srcset="img/webp/cafe_sandwich-mobile2@1x.webp 1x, img/webp/cafe_sandwich-mobile2@2x.webp 2x, img/webp/cafe_sandwich-mobile2@3x.webp 3x">
+			            <source type="image/webp" srcset="img/webp/cafe_sandwich-desktop2@1x.webp 1x, img/webp/cafe_sandwich-desktop2@2x.webp 2x, img/webp/cafe_sandwich-desktop2@3x.webp 3x">
+			            <source media="(max-width: 576px)" srcset="img/cafe_sandwich-mobile2@1x.png 1x, img/cafe_sandwich-mobile2@2x.png 2x, img/cafe_sandwich-mobile2@3x.png 3x">
+									<img class="meeting__image" src="img/cafe_sandwich-desktop2@1x.png" srcset="img/cafe_sandwich-desktop2@2x.png 2x, img/cafe_sandwich-desktop2@3x.png 3x" alt="Кафе &quot;Сендвич&quot;">
+								</picture>
+							</li>
+							<li class="meeting__item item">
+								<picture>
+									<source type="image/webp" media="(max-width: 576px)" srcset="img/webp/cafe_sandwich-mobile3@1x.webp 1x, img/webp/cafe_sandwich-mobile3@2x.webp 2x, img/webp/cafe_sandwich-mobile3@3x.webp 3x">
+			            <source type="image/webp" srcset="img/webp/cafe_sandwich-desktop3@1x.webp 1x, img/webp/cafe_sandwich-desktop3@2x.webp 2x, img/webp/cafe_sandwich-desktop3@3x.webp 3x">
+			            <source media="(max-width: 576px)" srcset="img/cafe_sandwich-mobile3@1x.png 1x, img/cafe_sandwich-mobile3@2x.png 2x, img/cafe_sandwich-mobile3@3x.png 3x">
+									<img class="meeting__image" src="img/cafe_sandwich-desktop3@1x.png" srcset="img/cafe_sandwich-desktop3@2x.png 2x, img/cafe_sandwich-desktop3@3x.png 3x" alt="Кафе &quot;Сендвич&quot;">
+								</picture>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<button class="gathering__btn btn">Посетить вечер</button>
+			</section>
+
+			<section class="organizer">
+				<h2 class="organizer__title">Об организаторе</h2>
+				<div class="organizer__left">
+					<svg class="organizer__logo icon-logo"></svg>
+				</div>
+				<div class="organizer__right">
+					<h3 class="organizer__info">Мы ‒ сообщество студентов Bible Study Group Ужгород.</h3>
+					<p class="organizer__text">Среди нас собрались люди, которые начали задаваться вечными вопросами   и нашли на многие из них ясные ответы в Библии. Мы любим читать Библию. Любим помогать друг другу и проводить время вместе. Также, мы общаемся с такими же студентами по всему миру. Сейчас похожие сообщества существуют во многих городах Украины и других стран мира, таких как Россия, Армения, Германия, США и т.д.</p>
+				</div>
+				<ul class="organizer__communion fellowships">
+					<li class="fellowship__item">
+						<a class="fellowship__link" href="#">
+							<img class="fellowship__image" src="" alt="г. Киев, Украина">
+							<p class="fellowship__text">г. Киев</p>
+						</a>
+					</li>
+					<li class="fellowship__item">
+						<a class="fellowship__link" href="#">
+							<img class="fellowship__image" src="" alt="г. Чернигов, Украина">
+							<p class="fellowship__text">г. Чернигов</p>
+						</a>
+					</li>
+					<li class="fellowship__item">
+						<a class="fellowship__link" href="#">
+							<img class="fellowship__image" src="" alt="г. Москва, Россия">
+							<p class="fellowship__text">г. Москва</p>
+						</a>
+					</li>
+					<li class="fellowship__item">
+						<a class="fellowship__link" href="#">
+							<img class="fellowship__image" src="" alt="г. Штутгард, Германия">
+							<p class="fellowship__text">г. Штутгард</p>
+						</a>
+					</li>
+					<li class="fellowship__item">
+						<a class="fellowship__link" href="#">
+							<img class="fellowship__image" src="" alt="г. Остин, США">
+							<p class="fellowship__text">г. Остин</p>
+						</a>
+					</li>
+					<li class="fellowship__item">
+						<a class="fellowship__link" href="#">
+							<img class="fellowship__image" src="" alt="г. Колумбус, США">
+							<p class="fellowship__text">г. Колумбус</p>
+						</a>
+					</li>
+				</ul>
+			</section>
+
+			<section class="faq">
+				<h2 class="faq__title"></h2>
+				<ul class="faq__list">
+					<li class="faq__item">
+						<h3 class="faq__question">Сколько стоит посещение этого мероприятия?</h3>
+						<p class="faq__answer">Все вечера бесплатные. Единственное, что нужно это зарегистрироваться. Нам необходимо заранее знать количество человек.</p>
+					</li>
+					<li class="faq__item">
+						<h3 class="faq__question">К какой конфессии вы принадлежите?</h3>
+						<p class="faq__answer">Многие из нас - это христиане, некоторые просто видят в нас хорошую компанию приличных людей и поэтому остаются в сообществе. Но мы не причисляем себя к какой-либо конфессии или группе.</p>
+					</li>
+					<li class="faq__item">
+						<h3 class="faq__question">Что мне делать, если я чувствую глубокую пустоту и неудовлетворение?</h3>
+						<p class="faq__answer">На этот вопрос как раз отвечает Библия. И не думайте, что такое ощущение остро только у Вас. Пустоту чувствуют все люди, кто еще не узнал, что об этом говорит Библия. Для этого мы проводим наши вечера.</p>
+					</li>
+					<li class="faq__item">
+						<h3 class="faq__question">Зачем мне читать Библию?</h3>
+						<p class="faq__answer">Библия - абсолютно удивительная книга. Во всех смыслах. Ее история, ее композиция, мысли и мудрость, ее влияние на человеческие жизни и способность отвечать на самые сокровенные вопросы не позволяют пренебрегать ею. Поэтому стоит прочитать такую книгу.</p>
+					</li>
+				</ul>
 			</section>
 		</main>
 
 		<footer class="page-footer">
-			
+			<div class="page-footer__contacts contacts">
+				<b class="contacts__title"></b>
+				<table class="contacts__table">
+					<tr>
+						<td class="contacts__phone"></td>
+						<td class="contacts__name"></td>
+					</tr>
+					<tr>
+						<td class="contacts__phone"></td>
+						<td class="contacts__name"></td>
+					</tr>
+				</table>
+				<a class="contacts__copyright" href="http://biblestudygroup.info" target="_blank">&copy; BSG Digital, 2018</a>
+			</div>
+			<button class="page-footer__btn">Зарегистрироваться</button>
 		</footer>
 
     <script src="js/scripts.min.js"></script>
