css occurs-where

--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
 				</nav>
 			</div>
 			<div class="page-header__center">
-				<p class="page-header__info">22 ноября – 2 декабря</p>
+				<p class="page-header__info page-header__info--top">22 ноября – 2 декабря</p>
 				<h1 class="page-header__title">Вечера чтения Библии</h1>
 				<p class="page-header__info page-header__info--center">Две недели совместного чтения Библии в приятной</p>
 				<p class="page-header__info page-header__info--bottom">компании студентов и за горячим чаем</p>
@@ -95,11 +95,12 @@
 			<section class="occurs-where">
 				<h2 class="occurs-where__title">Что там будет?</h2>
 				<ul class="occurs-where__list agenda">
-					<li class="agenda__item">
-						<h3 class="agenda__title">Чтение и изучение Библии</h3>
-						<p class="agenda__text">Будем много читать и общаться о том, что написано непосредственно в Библии</p>
+					<li class="agenda__item agenda__item--reading">
+						<svg class="agenda__icon icon--book" aria-hidden="true" role="presentation" width="44" height="35"><use xlink:href="#icon-book"></use></svg>
+						<h3 class="agenda__title agenda__title--reading">Чтение и изучение Библии</h3>
+						<p class="agenda__text">Будем много читать и общаться о том, что&nbsp;написано непосредственно в Библии</p>
 					</li>
-					<li class="agenda__images">
+					<li class="agenda__images agenda__images--reading">
 						<picture>
               <source type="image/webp" media="(max-width: 576px)" srcset="img/webp/reading_photo-mobile@1x.webp 1x, img/webp/reading_photop-mobile@2x.webp 2x, img/webp/reading_photop-mobile@3x.webp 3x">
               <source type="image/webp" srcset="img/webp/reading_photoe-desktop@1x.webp 1x, img/webp/reading_photo-desktop@2x.webp 2x, img/webp/reading_photo-desktop@3x.webp 3x">
@@ -107,7 +108,7 @@
               <img class="agenda__image" src="img/reading_photo-desktop@1x.jpg" srcset="img/reading_photo-desktop@2x.jpg 2x, img/reading_photo-desktop@3x.jpg 3x" alt="Чтение и изучение Библии">
             </picture>
 					</li>
-					<li class="agenda__images">
+					<li class="agenda__images agenda__images--questions">
 						<picture>
               <source type="image/webp" media="(max-width: 576px)" srcset="img/webp/questions_photo-mobile@1x.webp 1x, img/webp/questions_photo-mobile@2x.webp 2x, img/webp/questions_photo-mobile@3x.webp 3x">
               <source type="image/webp" srcset="img/webp/questions_photo-desktop@1x.webp 1x, img/webp/questions_photo-desktop@2x.webp 2x, img/webp/questions_photo-desktop@3x.webp 3x">
@@ -115,15 +116,17 @@
               <img class="agenda__image" src="img/questions_photo-desktop@1x.jpg" srcset="img/questions_photo-desktop@2x.jpg 2x, img/questions_photo-desktop@3x.jpg 3x" alt="Вопросы – Ответы">
             </picture>
 					</li>
-					<li class="agenda__item">
-						<h3 class="agenda__title">Вопросы – Ответы</h3>
-						<p class="agenda__text">Сможете задавать любые вопросы о Библии, Боге, религии и мы постараемся дать на них ответ</p>
+					<li class="agenda__item agenda__item--questions">
+						<svg class="agenda__icon icon--question" aria-hidden="true" role="presentation" width="44" height="44"><use xlink:href="#icon-question"></use></svg>
+						<h3 class="agenda__title agenda__title--questions">Вопросы – Ответы</h3>
+						<p class="agenda__text">Сможете задавать любые вопросы о Библии, Боге,&nbsp;религии и мы постараемся дать на них ответ</p>
 					</li>
-					<li class="agenda__item">
-						<h3 class="agenda__title">Общение со студентами</h3>
-						<p class="agenda__text">Познакомитесь и пообщаетесь со многими молодыми людьми</p>
+					<li class="agenda__item agenda__item--fellowship">
+						<svg class="agenda__icon icon--five" aria-hidden="true" role="presentation" width="44" height="44"><use xlink:href="#icon-five"></use></svg>
+						<h3 class="agenda__title agenda__title--fellowship">Общение со студентами</h3>
+						<p class="agenda__text">Познакомитесь и пообщаетесь со&nbsp;многими молодыми людьми</p>
 					</li>
-					<li class="agenda__images">
+					<li class="agenda__images agenda__images--fellowship">
 						<picture>
               <source type="image/webp" media="(max-width: 576px)" srcset="img/webp/fellowship_photo-mobile@1x.webp 1x, img/webp/fellowship_photo-mobile@2x.webp 2x, img/webp/fellowship_photo-mobile@3x.webp 3x">
               <source type="image/webp" srcset="img/webp/fellowship_photo-desktop@1x.webp 1x, img/webp/fellowship_photo-desktop@2x.webp 2x, img/webp/fellowship_photo-desktop@3x.webp 3x">
@@ -131,16 +134,18 @@
               <img class="agenda__image" src="img/fellowship_photo-desktop@1x.jpg" srcset="img/fellowship_photo-desktop@2x.jpg 2x, img/fellowship_photo-desktop@3x.jpg 3x" alt="Общение со студентами">
             </picture>
 					</li>
-					<li class="agenda__item">
-						<h3 class="agenda__title">Приятная атмосфера</h3>
+					<li class="agenda__item agenda__item--ambiance">
+						<svg class="agenda__icon icon--happy" aria-hidden="true" role="presentation" width="44" height="44"><use xlink:href="#icon-happy"></use></svg>
+						<h3 class="agenda__title agenda__title--ambiance">Приятная атмосфера</h3>
 						<p class="agenda__text">Точно почувствуете себя уютно и комфортно благодаря атмосфере вечеров</p>
 					</li>
-					<li class="agenda__item">
-						<h3 class="agenda__title">Чай и печенье</h3>
+					<li class="agenda__item agenda__item--warm">
+						<svg class="agenda__icon icon--tea-cup" aria-hidden="true" role="presentation" width="44" height="45"><use xlink:href="#icon-tea-cup"></use></svg>
+						<h3 class="agenda__title agenda__title--warm">Чай и печенье</h3>
 						<p class="agenda__text">Сможете согреться горячим чаем с печеньем после холодной улицы</p>
 					</li>
 				</ul>
-				<a class="agenda__btn btn" href="#">Посетить вечер
+				<a class="occurs-where__btn btn" href="#">Посетить вечер
 					<svg class="icon icon--arrow-btn" aria-hidden="true" role="presentation" width="30" height="16"><use xlink:href="#icon-arrow-btn"></use></svg>
 				</a>
 			</section>
