--- a/app/index.html
+++ b/app/index.html
@@ -228,40 +228,66 @@
 			</section>
 
 			<section class="fellowships">
+				<h2 class="fellowships__title">Мы активно общаемся с:</h2>
 				<ul class="fellowships__list">
 					<li class="fellowship__item">
-						<a class="fellowship__link" href="#">
-							<img class="fellowship__image" src="" alt="г. Киев, Украина">
+						<a class="fellowship__link" href="https://www.instagram.com/biblestudygroup.info/?hl=ru">
+							<svg class="fellowship__image fellowship__logo icon icon--logo" width="155" height="155"><use xlink:href="#icon-logo"></use></svg>
 							<p class="fellowship__text">г. Киев</p>
 						</a>
 					</li>
 					<li class="fellowship__item">
-						<a class="fellowship__link" href="#">
-							<img class="fellowship__image" src="" alt="г. Чернигов, Украина">
+						<a class="fellowship__link" href="https://www.instagram.com/studentslovingbible/?hl=ru">
+							<picture>
+								<source type="image/webp" media="(max-width: 576px)" srcset="img/webp/fellowship-mobile-color-chernigiv@1x.webp 1x, img/webp/fellowship-mobile-color-chernigiv@2x.webp 2x">
+		            <source type="image/webp" srcset="img/webp/fellowship-desktop-color-chernigiv@1x.webp 1x, img/webp/fellowship-desktop-color-chernigiv@2x.webp 2x">
+		            <source media="(max-width: 576px)" srcset="img/fellowship-mobile-color-chernigiv@1x.png 1x, img/fellowship-mobile-color-chernigiv@2x.png 2x">
+								<img class="fellowship__image fellowship__image--chernigiv" src="img/fellowship-desktop-color-chernigiv@1x.png" srcset="img/fellowship-desktop-color-chernigiv@2x.png 2x" alt="г. Чернигов, Украина">
+							</picture>
 							<p class="fellowship__text">г. Чернигов</p>
 						</a>
 					</li>
 					<li class="fellowship__item">
-						<a class="fellowship__link" href="#">
-							<img class="fellowship__image" src="" alt="г. Москва, Россия">
+						<a class="fellowship__link" href="https://www.instagram.com/msu_bible/?hl=ru">
+							<picture>
+								<source type="image/webp" media="(max-width: 576px)" srcset="img/webp/fellowship-mobile-color-moscow@1x.webp 1x, img/webp/fellowship-mobile-color-moscow@2x.webp 2x">
+		            <source type="image/webp" srcset="img/webp/fellowship-desktop-color-moscow@1x.webp 1x, img/webp/fellowship-desktop-color-moscow@2x.webp 2x">
+		            <source media="(max-width: 576px)" srcset="img/fellowship-mobile-color-moscow@1x.png 1x, img/fellowship-mobile-color-moscow@2x.png 2x">
+								<img class="fellowship__image fellowship__image--moscow" src="img/fellowship-desktop-color-moscow@1x.png" srcset="img/fellowship-desktop-color-moscow@2x.png 2x" alt="г. Москва, Россия">
+							</picture>
 							<p class="fellowship__text">г. Москва</p>
 						</a>
 					</li>
 					<li class="fellowship__item">
-						<a class="fellowship__link" href="#">
-							<img class="fellowship__image" src="" alt="г. Штутгард, Германия">
+						<a class="fellowship__link" href="https://www.instagram.com/studienbibel/?hl=ru">
+							<picture>
+								<source type="image/webp" media="(max-width: 576px)" srcset="img/webp/fellowship-mobile-color-stuttgard@1x.webp 1x, img/webp/fellowship-mobile-color-stuttgard@2x.webp 2x">
+		            <source type="image/webp" srcset="img/webp/fellowship-desktop-color-stuttgard@1x.webp 1x, img/webp/fellowship-desktop-color-stuttgard@2x.webp 2x">
+		            <source media="(max-width: 576px)" srcset="img/fellowship-mobile-color-stuttgard@1x.png 1x, img/fellowship-mobile-color-stuttgard@2x.png 2x">
+								<img class="fellowship__image fellowship__image--stuttgard" src="img/fellowship-desktop-color-stuttgard@1x.png" srcset="img/fellowship-desktop-color-stuttgard@2x.png 2x" alt="г. Штутгард, Германия">
+							</picture>
 							<p class="fellowship__text">г. Штутгард</p>
 						</a>
 					</li>
 					<li class="fellowship__item">
-						<a class="fellowship__link" href="#">
-							<img class="fellowship__image" src="" alt="г. Остин, США">
+						<a class="fellowship__link" href="https://www.instagram.com/csoc_tx/?hl=ru">
+							<picture>
+								<source type="image/webp" media="(max-width: 576px)" srcset="img/webp/fellowship-mobile-color-csoc@1x.webp 1x, img/webp/fellowship-mobile-color-csoc@2x.webp 2x">
+		            <source type="image/webp" srcset="img/webp/fellowship-desktop-color-csoc@1x.webp 1x, img/webp/fellowship-desktop-color-csoc@2x.webp 2x">
+		            <source media="(max-width: 576px)" srcset="img/fellowship-mobile-color-csoc@1x.png 1x, img/fellowship-mobile-color-csoc@2x.png 2x">
+								<img class="fellowship__image fellowship__image--csoc" src="img/fellowship-desktop-color-csoc@1x.png" srcset="img/fellowship-desktop-color-csoc@2x.png 2x" alt="г. Остин, США">
+							</picture>
 							<p class="fellowship__text">г. Остин</p>
 						</a>
 					</li>
 					<li class="fellowship__item">
-						<a class="fellowship__link" href="#">
-							<img class="fellowship__image" src="" alt="г. Колумбус, США">
+						<a class="fellowship__link" href="https://www.instagram.com/coc_osu/">
+							<picture>
+								<source type="image/webp" media="(max-width: 576px)" srcset="img/webp/fellowship-mobile-color-ohaio@1x.webp 1x, img/webp/fellowship-mobile-color-ohaio@2x.webp 2x">
+		            <source type="image/webp" srcset="img/webp/fellowship-desktop-color-ohaio@1x.webp 1x, img/webp/fellowship-desktop-color-ohaio@2x.webp 2x">
+		            <source media="(max-width: 576px)" srcset="img/fellowship-mobile-color-ohaio@1x.png 1x, img/fellowship-mobile-color-ohaio@2x.png 2x">
+								<img class="fellowship__image fellowship__image--ohaio" src="img/fellowship-desktop-color-ohaio@1x.png" srcset="img/fellowship-desktop-color-ohaio@2x.png 2x" alt="г. Колумбус, США">
+							</picture>
 							<p class="fellowship__text">г. Колумбус</p>
 						</a>
 					</li>
@@ -269,23 +295,35 @@
 			</section>
 
 			<section class="faq">
-				<h2 class="faq__title"></h2>
+				<h2 class="page-main__title faq__title">F.A.Q.</h2>
 				<ul class="faq__list">
 					<li class="faq__item">
-						<h3 class="faq__question">Сколько стоит посещение этого мероприятия?</h3>
-						<p class="faq__answer">Все вечера бесплатные. Единственное, что нужно это зарегистрироваться. Нам необходимо заранее знать количество человек.</p>
+						<input class="faq__input" id="question-1" name="accordion" type="checkbox">
+						<label class="faq__question" for="question-1">Сколько стоит посещение этого мероприятия?</label>
+						<article class="faq__answer faq__answer--1">
+							<p class="faq__text">Все вечера бесплатные. Единственное, что нужно – это зарегистрироваться. Нам необходимо заранее знать количество человек.</p>
+						</article>
 					</li>
 					<li class="faq__item">
-						<h3 class="faq__question">К какой конфессии вы принадлежите?</h3>
-						<p class="faq__answer">Многие из нас - это христиане, некоторые просто видят в нас хорошую компанию приличных людей и поэтому остаются в сообществе. Но мы не причисляем себя к какой-либо конфессии или группе.</p>
+						<input class="faq__input" id="question-2" name="accordion" type="checkbox">
+						<label class="faq__question" for="question-2">К какой конфессии вы принадлежите?</label>
+						<article class="faq__answer faq__answer--2">
+							<p class="faq__text">Многие из нас - это христиане, некоторые просто видят в нас хорошую компанию приличных людей и поэтому остаются в сообществе. Но мы не причисляем себя к какой-либо конфессии или группе.</p>
+						</article>
 					</li>
 					<li class="faq__item">
-						<h3 class="faq__question">Что мне делать, если я чувствую глубокую пустоту и неудовлетворение?</h3>
-						<p class="faq__answer">На этот вопрос как раз отвечает Библия. И не думайте, что такое ощущение остро только у Вас. Пустоту чувствуют все люди, кто еще не узнал, что об этом говорит Библия. Для этого мы проводим наши вечера.</p>
+						<input class="faq__input" id="question-3" name="accordion" type="checkbox">
+						<label class="faq__question faq__question--big" for="question-3">Что мне делать, если я чувствую глубокую пустоту и неудовлетворение?</label>
+						<article class="faq__answer faq__answer--3">
+							<p class="faq__text">На этот вопрос как раз отвечает Библия. И не думайте, что такое ощущение остро только у Вас. Пустоту чувствуют все люди, кто еще не узнал, что об этом говорит Библия. Для этого мы проводим наши вечера.</p>
+						</article>
 					</li>
 					<li class="faq__item">
-						<h3 class="faq__question">Зачем мне читать Библию?</h3>
-						<p class="faq__answer">Библия - абсолютно удивительная книга. Во всех смыслах. Ее история, ее композиция, мысли и мудрость, ее влияние на человеческие жизни и способность отвечать на самые сокровенные вопросы не позволяют пренебрегать ею. Поэтому стоит прочитать такую книгу.</p>
+						<input class="faq__input" id="question-4" name="accordion" type="checkbox">
+						<label class="faq__question" for="question-4">Зачем мне читать Библию?</label>
+						<article class="faq__answer faq__answer--4">
+							<p class="faq__text">Библия - абсолютно удивительная книга. Во всех смыслах. Ее история, ее композиция, мысли и мудрость, ее влияние на человеческие жизни и способность отвечать на самые сокровенные вопросы не позволяют пренебрегать ею. Поэтому стоит прочитать такую книгу.</p>
+						</article>
 					</li>
 				</ul>
 			</section>
@@ -293,24 +331,26 @@
 
 		<footer class="page-footer">
 			<div class="page-footer__contacts contacts">
-				<b class="contacts__title"></b>
-				<table class="contacts__table">
-					<tr>
-						<td class="contacts__phone"></td>
-						<td class="contacts__name"></td>
-					</tr>
-					<tr>
-						<td class="contacts__phone"></td>
-						<td class="contacts__name"></td>
-					</tr>
-				</table>
-				<a class="contacts__copyright" href="http://biblestudygroup.info" target="_blank">&copy; BSG Digital, 2018</a>
+				<div class="contacts__inner">
+					<b class="contacts__title">Контакты</b>
+					<table class="contacts__table">
+						<tr>
+							<td class="contacts__phone">+38 050 673 84 44</td>
+							<td class="contacts__name">Сергей Осаул</td>
+						</tr>
+						<tr>
+							<td class="contacts__phone">+38 098 787 14 85</td>
+							<td class="contacts__name">Андрей Грабчак</td>
+						</tr>
+					</table>
+					<a class="contacts__copyright" href="http://biblestudygroup.info" target="_blank">&copy; BSG Digital, 2018</a>
+				</div>
+				<button class="page-footer__btn">Зарегистрироваться</button>
 			</div>
-			<button class="page-footer__btn">Зарегистрироваться</button>
 		</footer>
-
+<!-- 
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-		<script src="xprecise.min.js"></script>
+		<script src="xprecise.min.js"></script> -->
     <script src="js/scripts.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
 
