--- a/app/index.html
+++ b/app/index.html
@@ -42,28 +42,28 @@
 				<nav class="main-nav main-nav--closed main-nav--nojs">
 					<ul class="main-nav__list">
 						<li class="main-nav__item">
-							<a class="main-nav__link" href="#">Что там будет</a>
+							<a class="main-nav__link" href="#occurs-where">Что там будет</a>
 						</li>
 						<li class="main-nav__item">
-							<a class="main-nav__link" href="#">Подарок</a>
+							<a class="main-nav__link" href="#present">Подарок</a>
 						</li>
 						<li class="main-nav__item">
-							<a class="main-nav__link" href="#">Где собираемся</a>
+							<a class="main-nav__link" href="#gathering">Где собираемся</a>
 						</li>
 						<li class="main-nav__item">
-							<a class="main-nav__link" href="#">Об организации</a>
+							<a class="main-nav__link" href="#organizer">Об организации</a>
 						</li>
 						<li class="main-nav__item">
-							<a class="main-nav__link" href="#">F.A.Q.</a>
+							<a class="main-nav__link" href="#faq">F.A.Q.</a>
 						</li>
 						<li class="main-nav__item">
-							<a class="main-nav__link" href="#">Контакты</a>
+							<a class="main-nav__link" href="#contacts">Контакты</a>
 						</li>
 					</ul>
 				</nav>
 			</div>
 			<div class="page-header__center">
-				<p class="page-header__info page-header__info--top">22 ноября – 2 декабря</p>
+				<p class="page-header__info page-header__info--top">21 ноября – 30 ноября</p>
 				<h1 class="page-header__title">Вечера чтения Библии</h1>
 				<p class="page-header__info page-header__info--center">Две недели совместного чтения Библии в приятной</p>
 				<p class="page-header__info page-header__info--bottom">компании студентов и за горячим чаем</p>
@@ -72,7 +72,7 @@
 				<ul class="schedule__list">
 					<li class="schedule__item">
 						<svg class="schedule__icon schedule__icon--clock" aria-hidden="true" role="presentation" width="21" height="21"><use xlink:href="#icon-clock"></use></svg>
-						17:00–20:00
+						17:00–19:00
 					</li>
 					<li class="schedule__item">
 						<svg class="schedule__icon schedule__icon--calendar" aria-hidden="true" role="presentation" width="22" height="21"><use xlink:href="#icon-calendar"></use></svg>
@@ -92,7 +92,7 @@
 		</header>
 
 		<main class="page-main">
-			<section class="occurs-where">
+			<section class="occurs-where" id="occurs-where">
 				<h2 class="page-main__title occurs-where__title">Что там будет?</h2>
 				<ul class="occurs-where__list agenda">
 					<li class="agenda__item agenda__item--reading">
@@ -150,7 +150,7 @@
 				</a>
 			</section>
 
-			<section class="present">
+			<section class="present" id="present">
 				<div class="present__inner">
 					<h2 class="page-main__title present__title">Подарок</h2>
 					<div class="present__left">
@@ -158,7 +158,7 @@
 							<source type="image/webp" media="(max-width: 576px)" srcset="img/webp/gift-mobile@1x.webp 1x, img/webp/gift-mobile@2x.webp 2x, img/webp/gift-mobile@3x.webp 3x">
 	            <source type="image/webp" srcset="img/webp/gift-desktop@1x.webp 1x, img/webp/gift-desktop@2x.webp 2x, img/webp/gift-desktop@3x.webp 3x">
 	            <source media="(max-width: 576px)" srcset="img/gift-mobile@1x.png 1x, img/gift-mobile@2x.png 2x, img/gift-mobile@3x.png 3x">
-	            <img class="agenda__image" src="img/gift-desktop@1x.png" srcset="img/gift-desktop@2x.png 2x, img/gift-desktop@3x.png 3x" alt="Новый Завет">
+	            <img class="present__image" src="img/gift-desktop@1x.png" srcset="img/gift-desktop@2x.png 2x, img/gift-desktop@3x.png 3x" alt="Новый Завет">
 						</picture>
 					</div>
 					<div class="present__right">
@@ -171,7 +171,7 @@
 				</div>
 			</section>
 
-			<section class="gathering">
+			<section class="gathering" id="gathering">
 				<h2 class="page-main__title gathering__title">Где собираемся?</h2>
 				<div class="gathering__inner meeting">
 					<div class="meeting__left">
@@ -215,7 +215,7 @@
 				</a>
 			</section>
 
-			<section class="organizer">
+			<section class="organizer" id="organizer">
 				<h2 class="page-main__title organizer__title">Об организаторе</h2>
 				<div class="organizer__left">
 					<svg class="organizer__logo icon icon--logo" width="235" height="235"><use xlink:href="#icon-logo"></use></svg>
@@ -227,7 +227,7 @@
 				</div>
 			</section>
 
-			<section class="fellowships">
+			<section class="fellowships" id="fellowships">
 				<h2 class="fellowships__title">Мы активно общаемся с:</h2>
 				<ul class="fellowships__list">
 					<li class="fellowship__item">
@@ -294,7 +294,7 @@
 				</ul>
 			</section>
 
-			<section class="faq">
+			<section class="faq" id="faq">
 				<h2 class="page-main__title faq__title">F.A.Q.</h2>
 				<ul class="faq__list">
 					<li class="faq__item">
@@ -330,7 +330,7 @@
 		</main>
 
 		<footer class="page-footer">
-			<div class="page-footer__contacts contacts">
+			<div class="page-footer__contacts contacts" id="contacts">
 				<div class="contacts__inner">
 					<b class="contacts__title">Контакты</b>
 					<table class="contacts__table">
